--- a/eng.html
+++ b/eng.html
@@ -255,8 +255,8 @@
                     <div class="text-left">
                       <h3>Digital counter</h3>
                       <p>
-                        This topic is Digital counter, finish by fullpage.js, user can browse
-                        by sliding a page and optimization in mobile version.
+                        　This topic is Digital counter, finish by fullpage.js, user can browse
+                        by sliding optimization in mobile version.
                       </p>
                       <a class="line" href="https://like4628.github.io/counter/#TrendPage" target="_blank">Show
                         project</a>
@@ -277,7 +277,7 @@
                     <div class="text-right">
                       <h3>Electronic sport</h3>
                       <p>
-                        Enthusiastic for electronic sports and tech so I make a web to display, this website
+                        　Enthusiastic for electronic sports and tech so I make a web to display, this website
                         finish by Bootstrap. Add some interactive effect like bubbles in banner I Also increase picture
                         scale
                         size to let user more fun.
@@ -300,7 +300,7 @@
                     <div class="text-left">
                       <h3>Supercar display</h3>
                       <p>
-                        I like supercar, so this website introduce some famous supercar in the world by Bootstrap, a
+                        　I like supercar, so this website introduce some famous supercar in the world by Bootstrap, a
                         basic composing use some picture and scale effect.
 
                       </p>
@@ -322,7 +322,7 @@
                     <div class="text-right">
                       <h3>AE design</h3>
                       <p>
-                        During Study website technology I found effects and animations. It is grateful to use in design
+                        　During Study website technology I found effects and animations. It is grateful to use in design
                         web,
                         so I try to learn more about AE、PR 、C4D etc...
 
