--- a/index.html
+++ b/index.html
@@ -206,8 +206,8 @@
             <div class="timeline"></div>
             <div data-aos="zoom-in">
               <div class="timecard-left timecard-one">
-                2020
-                因為興趣以及本身對於設計一些認識想要轉職為網頁設計師，所以在網路以及很多外國資源自學了一些HTML,CSS,JavaScript，AE所以對於產品形象頁面做了一些成品。
+                2020，
+                因為興趣以及本身對於設計一些認識想要轉職為網頁設計師，所以在網路以及很多外國資源自學了一些HTML, CSS, JavaScript，AE所以對於產品形象頁面做了一些成品。
               </div>
             </div>
             <div data-aos="zoom-in">
@@ -220,7 +220,7 @@
                 2017畢業，實習於安恩嘉公司擔任產品測試工程師，協助設備檢測以及QA，學習了一些網路知識，對於網路有基本了解認識，也學習到了攝影機整體的製造還有類別。
               </div>
               <div class="timecard-right timecard-four wow bounceInUp">
-                2013~2016 就讀於台北科技大學
+                2013~2016，就讀於台北科技大學
                 電子工程系，在校學習是積體電路等等方面電路知識，以及參加一些專題競賽，還有協助網頁產出。
               </div>
             </div>
@@ -247,7 +247,7 @@
                     <div class="text-left">
                       <h3>電子計時器</h3>
                       <p>
-                        FullPage整頁式結構，這個網頁是介紹一個產品計時器，利用fullPage讓使用者可以一頁式的瀏覽，一次跳一頁的方式呈現此產品的資訊，在手機也做了響應式的優化。
+                        　　FullPage整頁式結構，這個網頁是介紹一個產品計時器，利用fullPage讓使用者可以一頁式的瀏覽，一次跳一頁的方式呈現此產品的資訊，在手機也做了響應式的優化。
                       </p>
                       <a class="line" href="https://like4628.github.io/counter/#TrendPage" target="_blank">Show
                         project</a>
@@ -268,7 +268,7 @@
                     <div class="text-right">
                       <h3>電子競技</h3>
                       <p>
-                        熱愛電子競技和技術，有感而發製作一個關於競技的網頁，利用Bootstrap格線系統讓排版容易控制，加了一點互動特效搭配，例如Banner動態泡泡以及圖片滑動，放大縮小等讓網頁不枯燥乏味，增加互動性。
+                        　　熱愛電子競技和技術，有感而發製作一個關於競技的網頁，利用Bootstrap格線系統讓排版容易控制，加了一點互動特效搭配，例如Banner動態泡泡以及圖片滑動，放大縮小等讓網頁不枯燥乏味，增加互動性。
                       </p>
                       <a class="line" href="https://like4628.github.io/eSport/" target="_blank">Show project</a>
                     </div>
@@ -288,7 +288,7 @@
                     <div class="text-left">
                       <h3>跑車展示</h3>
                       <p>
-                        喜歡跑車，有一些研究，利用這個興趣製作了一些世界著名的跑車介紹，此網頁也是利用bootstrap的方式製作，這個比較基本的圖片互動放大效果也是剛學習的第一個成品。
+                        　　喜歡跑車，有一些研究，利用這個興趣製作了一些世界著名的跑車介紹，此網頁也是利用bootstrap的方式製作，這個比較基本的圖片互動放大效果也是剛學習的第一個成品。
                       </p>
                       <a class="line" href="https://like4628.github.io/supercar/" target="_blank">Show project</a>
                     </div>
@@ -308,7 +308,7 @@
                     <div class="text-right">
                       <h3>AE 設計</h3>
                       <p>
-                        學習網頁過程中意外發現特效以及動畫製作蠻有趣的，所以嘗試設計關於
+                        　　學習網頁過程中意外發現特效以及動畫製作蠻有趣的，所以嘗試設計關於
                         AE 、 PR 、
                         C4D等等的軟體可以做出一些簡單的開場動畫以及產品介紹的影片。
                       </p>
