--- a/eng.html
+++ b/eng.html
@@ -253,7 +253,7 @@
                   </div>
                   <div class="col-sm-6 TextBox">
                     <div class="text-left">
-                      <h3>Digital counter</h3>
+                      <h3>Digital Counter</h3>
                       <p>
                         　This topic is Digital counter, finish by fullpage.js, user can browse
                         by sliding optimization in mobile version.
@@ -275,7 +275,7 @@
                   </div>
                   <div class="col-sm-6 TextBox order-sm-1">
                     <div class="text-right">
-                      <h3>Electronic sport</h3>
+                      <h3>Electronic Sport</h3>
                       <p>
                         　Enthusiastic for electronic sports and tech so I make a web to display, this website
                         finish by Bootstrap. Add some interactive effect like bubbles in banner I Also increase picture
@@ -298,7 +298,7 @@
                   </div>
                   <div class="col-sm-6 TextBox">
                     <div class="text-left">
-                      <h3>Supercar display</h3>
+                      <h3>Supercar Display</h3>
                       <p>
                         　I like supercar, so this website introduce some famous supercar in the world by Bootstrap, a
                         basic composing use some picture and scale effect.
@@ -320,9 +320,9 @@
                   </div>
                   <div class="col-sm-6 TextBox order-sm-1">
                     <div class="text-right">
-                      <h3>AE design</h3>
+                      <h3>Multimedia Design</h3>
                       <p>
-                        　During Study website technology I found effects and animations. It is grateful to use in design
+                        　During Study website I found effects and animations. It is helpful to use in design
                         web,
                         so I try to learn more about AE、PR 、C4D etc...
 
