--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title>Nash - personal CV</title>
+  <title>Nash - 個人履歷</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
   <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
   <link rel="icon"
@@ -50,19 +50,19 @@
                 </a>
                 <ul class="ulmenu">
                   <li>
-                    <a class="responseList" id="home" href="#topPage">Home</a>
+                    <a class="responseList" id="home" href="#topPage">首頁</a>
                   </li>
                   <li>
-                    <a class="responseList" id="skill" href="#skillPage">Skill</a>
+                    <a class="responseList" id="skill" href="#skillPage">技術</a>
                   </li>
                   <li>
-                    <a class="responseList" id="experience" href="#ExperiencePage">Experience</a>
+                    <a class="responseList" id="experience" href="#ExperiencePage">經驗</a>
                   </li>
                   <li>
-                    <a class="responseList" id="myworks" href="#WorksPage">My Works</a>
+                    <a class="responseList" id="myworks" href="#WorksPage">作品集</a>
                   </li>
                   <li>
-                    <a class="responseList" id="email" href="#emailPage">Email</a>
+                    <a class="responseList" id="email" href="#emailPage">聯絡方式</a>
                   </li>
                 </ul>
               </div>
@@ -78,7 +78,7 @@
           <div class="title wow rubberBand">
             <h1>I'AM Nash</h1>
             <a id="btn" href="#contact_bottom">
-              <div class="btn">Contact</div>
+              <div class="btn">聯繫我</div>
             </a>
           </div>
         </div>
@@ -88,9 +88,9 @@
           <div class="icon">
             <div class="fas fa-quote-right"></div>
           </div>
-          <p>I want to be a professional fron-end engineer</p>
-          <p>I am a fresh man in work</p>
-          <a href="#">Somebody-</a><span> for everyone</span>
+          <p>目標是成為一位網頁設計師以及前端工程師</p>
+          <p>以下是我的介紹</p>
+          <a href="#">信心、熱情 - </a><span> 對網頁的期待</span>
         </div>
       </div>
       <div class="skill lean-bg-bottom-left" id="skillPage">
@@ -201,7 +201,7 @@
       <!-- //Experience -->
       <div class="experience" id="ExperiencePage">
         <div class="container">
-          <h2 class="wow bounceInLeft">Experience</h2>
+          <h2 class="wow bounceInLeft">經驗</h2>
           <div class="timeline-group">
             <div class="timeline"></div>
             <div data-aos="zoom-in">
@@ -230,7 +230,7 @@
       <div class="work lean-bg-top-right" id="WorksPage">
         <div class="container">
           <h2 class="wow bounceInLeft">
-            My Works
+            網頁設計作品集
             <div class="work-list">
               <div class="work-item">
                 <div class="row wow bounceInRight">
@@ -325,7 +325,7 @@
       </div>
       <div class="contact lean-bg-bottom-right" id="emailPage">
         <div class="container">
-          <h2 class="wow bounceInRight">CONTACT</h2>
+          <h2 class="wow bounceInRight">更加了解我</h2>
           <form class="form wow fadeInUp" action="">
             <form-group class="form-group">
               <div class="row">
@@ -362,7 +362,7 @@
           <div class="bottomInfo">
             <div class="or"><span> OR</span></div>
             <div class="info">
-              <span class="mail">t102332026@ntut.org.tw</span><span class="tel"> 0925307312</span>
+              <span class="mail">t102332026@ntut.org.tw</span>
             </div>
             <div class="infoIcon">
               <a href="https://line.me/ti/p/aJVH0cDKSp" target="_blank"><i class="fab fa-line"> </i></a><a
@@ -392,8 +392,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/skrollr/0.6.30/skrollr.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.0.47/jquery.fancybox.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
   <script src="./script.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
 </body>
 
 </html>
