--- a/eng.html
+++ b/eng.html
@@ -377,7 +377,7 @@
           <div class="bottomInfo">
             <div class="or"><span> OR</span></div>
             <div class="info">
-              <span class="mail">t102332026@ntut.org.tw</span><span class="tel"> 0925307312</span>
+              <span class="mail">t102332026@ntut.org.tw</span>
             </div>
             <div class="infoIcon">
               <a href="https://line.me/ti/p/aJVH0cDKSp" target="_blank"><i class="fab fa-line"> </i></a><a
