--- a/index.html
+++ b/index.html
@@ -19,8 +19,31 @@
 
 <body>
   <!-- partial:index.partial.html -->
-
+  <!-- Loading start -->
+  <div class="preload">
+    <div class="loading">
+      <div class="wBall" id="wBall_1">
+        <div class="wInnerBall"></div>
+      </div>
+      <div class="wBall" id="wBall_2">
+        <div class="wInnerBall"></div>
+      </div>
+      <div class="wBall" id="wBall_3">
+        <div class="wInnerBall"></div>
+      </div>
+      <div class="wBall" id="wBall_4">
+        <div class="wInnerBall"></div>
+      </div>
+      <div class="wBall" id="wBall_5">
+        <div class="wInnerBall"></div>
+      </div>
+    </div>
+  </div>
+  <!-- Loading end -->
+  <!-- nav progress start -->
   <div class="progress"></div>
+  <!-- nav progress end -->
+  <!-- main page start -->
   <div class="wrapper">
     <div class="bg"></div>
     <div class="header jsHeader">
@@ -385,6 +408,7 @@
       </footer>
     </div>
   </div>
+  <!-- main page end -->
 
   <!-- partial -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
