update language icon

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             </a>
           </div>
           <div class="right">
-            <a class="languageChange" href="./eng.html">English</a>
+            <a class="languageChange fas fa-language" href="./eng.html"></a>
             <a class="menu" href="#response">
               <div class="bar bar1"></div>
               <div class="bar bar2"></div>
