--- a/eng.html
+++ b/eng.html
@@ -59,7 +59,7 @@
             </a>
           </div>
           <div class="right">
-            <a class="languageChange" href="./index.html">中文</a>
+            <a class="languageChange fas fa-language" href="./index.html"></a>
             <a class="menu" href="#response">
               <div class="bar bar1"></div>
               <div class="bar bar2"></div>
