--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
                     <a href="https://i.imgur.com/5v8IKHn.png" data-fancybox="data-fancybox">
                       <div class="picBox">
                         <div class="pic-inner pic-inner-resolution">
-                          <div class="pic pic4"></div>
+                          <div class="pic pic4 distortion"></div>
                         </div>
                       </div>
                     </a>
@@ -416,8 +416,13 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/skrollr/0.6.30/skrollr.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.0.47/jquery.fancybox.js"></script>
-  <script src="./script.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r120/three.min.js"></script>
+  <script src="https://res.cloudinary.com/bgdv/raw/upload/v1588272391/codepen.distortionHoverEffect/hover.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
+  <script src="./script.js"></script>
+  
 </body>
 
 </html>
