--- a/eng.html
+++ b/eng.html
@@ -270,17 +270,16 @@
                     <a href="https://i.imgur.com/vh6mLFX.png?1" data-fancybox="data-fancybox">
                       <div class="picBox">
                         <div class="pic-inner pic-inner-resolution">
-                          <div class="pic pic1"></div>
+                          <div class="pic pic1 distortionCounter"></div>
                         </div>
                       </div>
                     </a>
                   </div>
                   <div class="col-sm-6 TextBox">
                     <div class="text-left">
-                      <h3>Digital Counter</h3>
+                      <h3>電子計時器</h3>
                       <p>
-                        　This topic is Digital counter, finish by fullpage.js, user can browse
-                        by sliding optimization in mobile version.
+                        　　FullPage整頁式結構，這個網頁是介紹一個產品計時器，利用fullPage讓使用者可以一頁式的瀏覽，一次跳一頁的方式呈現此產品的資訊，在手機也做了響應式的優化。
                       </p>
                       <a class="line" href="https://like4628.github.io/counter/#TrendPage" target="_blank">Show
                         project</a>
@@ -292,19 +291,16 @@
                     <a href="https://i.imgur.com/W0Uei37.png" data-fancybox="data-fancybox">
                       <div class="picBox">
                         <div class="pic-inner pic-inner-resolution">
-                          <div class="pic pic2"></div>
+                          <div class="pic pic2 distortionEsports"></div>
                         </div>
                       </div>
                     </a>
                   </div>
                   <div class="col-sm-6 TextBox order-sm-1">
                     <div class="text-right">
-                      <h3>Electronic Sport</h3>
+                      <h3>電子競技</h3>
                       <p>
-                        　Enthusiastic for electronic sports and tech so I make a web to display, this website
-                        finish by Bootstrap. Add some interactive effect like bubbles in banner I Also increase picture
-                        scale
-                        size to let user more fun.
+                        　　熱愛電子競技和技術，有感而發製作一個關於競技的網頁，利用Bootstrap格線系統讓排版容易控制，加了一點互動特效搭配，例如Banner動態泡泡以及圖片滑動，放大縮小等讓網頁不枯燥乏味，增加互動性。
                       </p>
                       <a class="line" href="https://like4628.github.io/eSport/" target="_blank">Show project</a>
                     </div>
@@ -315,18 +311,16 @@
                     <a href="https://i.imgur.com/QInp9Uu.png" data-fancybox="data-fancybox">
                       <div class="picBox">
                         <div class="pic-inner pic-inner-resolution">
-                          <div class="pic pic3"></div>
+                          <div class="pic pic3 distortionCar"></div>
                         </div>
                       </div>
                     </a>
                   </div>
                   <div class="col-sm-6 TextBox">
                     <div class="text-left">
-                      <h3>Supercar Display</h3>
+                      <h3>跑車展示</h3>
                       <p>
-                        　I like supercar, so this website introduce some famous supercar in the world by Bootstrap, a
-                        basic composing use some picture and scale effect.
-
+                        　　喜歡跑車，有一些研究，利用這個興趣製作了一些世界著名的跑車介紹，此網頁也是利用bootstrap的方式製作，這個比較基本的圖片互動放大效果也是剛學習的第一個成品。
                       </p>
                       <a class="line" href="https://like4628.github.io/supercar/" target="_blank">Show project</a>
                     </div>
@@ -337,19 +331,18 @@
                     <a href="https://i.imgur.com/5v8IKHn.png" data-fancybox="data-fancybox">
                       <div class="picBox">
                         <div class="pic-inner pic-inner-resolution">
-                          <div class="pic pic4"></div>
+                          <div class="pic pic4 distortionAE"></div>
                         </div>
                       </div>
                     </a>
                   </div>
                   <div class="col-sm-6 TextBox order-sm-1">
                     <div class="text-right">
-                      <h3>Multimedia Design</h3>
+                      <h3>AE 設計</h3>
                       <p>
-                        　During Study website I found effects and animations. It is helpful to use in design
-                        web,
-                        so I try to learn more about AE、PR 、C4D etc...
-
+                        　　學習網頁過程中意外發現特效以及動畫製作蠻有趣的，所以嘗試設計關於
+                        AE 、 PR 、
+                        C4D等等的軟體可以做出一些簡單的開場動畫以及產品介紹的影片。
                       </p>
                       <a class="line" href="https://www.youtube.com/channel/UC463NgYamrU0YDScH3VjIGQ/"
                         target="_blank">Show project</a>
@@ -431,8 +424,12 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/skrollr/0.6.30/skrollr.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.0.47/jquery.fancybox.js"></script>
-  <script src="./script.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r120/three.min.js"></script>
+  <script src="https://res.cloudinary.com/bgdv/raw/upload/v1588272391/codepen.distortionHoverEffect/hover.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
+  <script src="./script.js"></script>
 </body>
 
 </html>
