--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
                     <a href="https://i.imgur.com/vh6mLFX.png?1" data-fancybox="data-fancybox">
                       <div class="picBox">
                         <div class="pic-inner pic-inner-resolution">
-                          <div class="pic pic1"></div>
+                          <div class="pic pic1 distortionCounter"></div>
                         </div>
                       </div>
                     </a>
@@ -282,7 +282,7 @@
                     <a href="https://i.imgur.com/W0Uei37.png" data-fancybox="data-fancybox">
                       <div class="picBox">
                         <div class="pic-inner pic-inner-resolution">
-                          <div class="pic pic2"></div>
+                          <div class="pic pic2 distortionEsports"></div>
                         </div>
                       </div>
                     </a>
@@ -302,7 +302,7 @@
                     <a href="https://i.imgur.com/QInp9Uu.png" data-fancybox="data-fancybox">
                       <div class="picBox">
                         <div class="pic-inner pic-inner-resolution">
-                          <div class="pic pic3"></div>
+                          <div class="pic pic3 distortionCar"></div>
                         </div>
                       </div>
                     </a>
@@ -322,7 +322,7 @@
                     <a href="https://i.imgur.com/5v8IKHn.png" data-fancybox="data-fancybox">
                       <div class="picBox">
                         <div class="pic-inner pic-inner-resolution">
-                          <div class="pic pic4 distortion"></div>
+                          <div class="pic pic4 distortionAE"></div>
                         </div>
                       </div>
                     </a>
