--- a/eng.html
+++ b/eng.html
@@ -277,9 +277,10 @@
                   </div>
                   <div class="col-sm-6 TextBox">
                     <div class="text-left">
-                      <h3>電子計時器</h3>
+                      <h3>Digital counter</h3>
                       <p>
-                        　　FullPage整頁式結構，這個網頁是介紹一個產品計時器，利用fullPage讓使用者可以一頁式的瀏覽，一次跳一頁的方式呈現此產品的資訊，在手機也做了響應式的優化。
+                        　　 This topic is Digital counter, finish by fullpage.js, user can browse
+                        by sliding a page and optimization in mobile version.
                       </p>
                       <a class="line" href="https://like4628.github.io/counter/#TrendPage" target="_blank">Show
                         project</a>
@@ -298,9 +299,12 @@
                   </div>
                   <div class="col-sm-6 TextBox order-sm-1">
                     <div class="text-right">
-                      <h3>電子競技</h3>
+                      <h3>Electronic sport</h3>
                       <p>
-                        　　熱愛電子競技和技術，有感而發製作一個關於競技的網頁，利用Bootstrap格線系統讓排版容易控制，加了一點互動特效搭配，例如Banner動態泡泡以及圖片滑動，放大縮小等讓網頁不枯燥乏味，增加互動性。
+                        　　Enthusiastic for electronic sports and tech so I make a web to display, this website
+                        finish by Bootstrap. Add some interactive effect like bubbles in banner I Also increase picture
+                        scale
+                        size to let user more fun.
                       </p>
                       <a class="line" href="https://like4628.github.io/eSport/" target="_blank">Show project</a>
                     </div>
@@ -318,9 +322,10 @@
                   </div>
                   <div class="col-sm-6 TextBox">
                     <div class="text-left">
-                      <h3>跑車展示</h3>
+                      <h3>Supercar display</h3>
                       <p>
-                        　　喜歡跑車，有一些研究，利用這個興趣製作了一些世界著名的跑車介紹，此網頁也是利用bootstrap的方式製作，這個比較基本的圖片互動放大效果也是剛學習的第一個成品。
+                        　　I like supercar, so this website introduce some famous supercar in the world by Bootstrap, a
+                        basic composing use some picture and scale effect.
                       </p>
                       <a class="line" href="https://like4628.github.io/supercar/" target="_blank">Show project</a>
                     </div>
@@ -338,11 +343,12 @@
                   </div>
                   <div class="col-sm-6 TextBox order-sm-1">
                     <div class="text-right">
-                      <h3>AE 設計</h3>
+                      <h3>AE design</h3>
                       <p>
-                        　　學習網頁過程中意外發現特效以及動畫製作蠻有趣的，所以嘗試設計關於
-                        AE 、 PR 、
-                        C4D等等的軟體可以做出一些簡單的開場動畫以及產品介紹的影片。
+                        　　 During Study website technology I found effects and animations. It is grateful to use in
+                        design
+                        web,
+                        so I try to learn more about AE、PR 、C4D etc...
                       </p>
                       <a class="line" href="https://www.youtube.com/channel/UC463NgYamrU0YDScH3VjIGQ/"
                         target="_blank">Show project</a>
@@ -417,7 +423,7 @@
       </footer>
     </div>
   </div>
-<!-- main page end -->
+  <!-- main page end -->
   <!-- partial -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
