update effect and text

--- a/eng.html
+++ b/eng.html
@@ -345,7 +345,7 @@
                     <div class="text-right">
                       <h3>AE design</h3>
                       <p>
-                        　　 During Study website technology I found effects and animations. It is grateful to use in
+                        　　 During Study website technology I found effects and animations. It is helpful to use in
                         design
                         web,
                         so I try to learn more about AE、PR 、C4D etc...
