--- a/eng.html
+++ b/eng.html
@@ -241,18 +241,19 @@
             </div>
             <div data-aos="zoom-in">
               <div class="timecard-right timecard-two wow bounceInUp">
-                2018~2019，as an engineer in Meicheng, associate with system intergration 、audio & video, learn about
-                engineering in movie theater and conference room, family with Mixer、Mixer、Amplifier、PA etc...
+                2018~2019，As an engineer in Meicheng, associate with system intergration 、audio & video, learn about
+                engineering in movie theater and conference room, family with Mixer、Amplifier、PA etc...
               </div>
             </div>
             <div data-aos="zoom-in">
               <div class="timecard-left timecard-three wow bounceInUp">
-                2017， graduated from NTUT，as a product test engineer in Diviotec, associate with devices testing and
+                2017， Graduated from NTUT，as a product test engineer in Diviotec, associate with devices testing and
                 QA, learn about surveillance camera, so I have basic in internet and camera.
               </div>
               <div class="timecard-right timecard-four wow bounceInUp">
-                2013，Study in Nation Taipei University of Tachnology Electronic department, major in integrated
-                circuit, have some experients in design circuit and design website.
+                2013，Study in National Taipei University Tachnology Electronic engineering department, major in
+                integrated
+                circuit, design IC and website.
 
               </div>
             </div>
