--- a/eng.html
+++ b/eng.html
@@ -14,8 +14,8 @@
       type="image/x-icon"
     />
     <!-- OG tag -->
-    <meta property="og:image" content="./asset/cover.PNG" />
-    <meta property="og:title" content="喜歡網頁設計的電子工程師" />
+    <meta property="og:image" content="https://i.imgur.com/h0gozDg.png" />
+    <meta property="og:title" content="CV 網頁介紹" />
     <meta
       property="og:description"
       content="個人的自我介紹以及履歷還有影音後製作品"
