--- a/eng.html
+++ b/eng.html
@@ -171,7 +171,7 @@
             <div class="icon">
               <div class="fas fa-quote-right"></div>
             </div>
-            <p>I want to be a professional fron-end engineer</p>
+            <p>I want to be a professional front-end engineer</p>
             <p>I am a fresh man in work</p>
             <a href="#">Somebody-</a><span> for everyone</span>
           </div>
