--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                       />
                     </div>
                     <div class="cardInner">
-                      <h4>Css</h4>
+                      <h4>CSS</h4>
                       <p>
                         使用過格線系統，Bootstrap ,
                         ElementUI。對於整體網頁的美化以及排版，位置規劃還有互動特效效果，字體、字型間距也有一定的了解。
