--- a/eng.html
+++ b/eng.html
@@ -86,12 +86,12 @@
             <div class="left">
               <a
                 class="fab fa-facebook-square"
-                href="https://www.facebook.com/profile.php?id=100003999642145"
+                href=""
                 target="_blank"
               ></a
               ><a
                 class="fab fa-line"
-                href="https://line.me/ti/p/aJVH0cDKSp"
+                href=""
                 target="_blank"
               ></a
               ><a
