--- a/index.html
+++ b/index.html
@@ -84,10 +84,10 @@
             <div class="left">
               <a
                 class="fab fa-facebook-square"
-                href="https://www.facebook.com/profile.php?id=100003999642145"
+                href=""
                 target="_blank"></a><a
                 class="fab fa-line"
-                href="https://line.me/ti/p/aJVH0cDKSp"
+                href=""
                 target="_blank"></a><a
                 class="fab fa-github-square"
                 href="https://github.com/like4628?tab=repositories"
