--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
             <div class="bottomInfo">
               <div class="or"><span> OR</span></div>
               <div class="info">
-                <span class="mail">t102332026@ntut.org.tw</span>
+                <span class="mail">xuannash0527@gmail.com</span>
               </div>
               <div class="infoIcon">
                 <a href="https://line.me/ti/p/aJVH0cDKSp" target="_blank"><i
