fix eng describe

--- a/eng.html
+++ b/eng.html
@@ -308,29 +308,22 @@
               <div class="timeline"></div>
               <div data-aos="zoom-in">
                 <div class="timecard-left timecard-one">
-                  2020，Due to my favorate, I want to transfer to web designer,
-                  learn knowledge from intenet course and forum, I study
-                  HTML、CSS、javascript. I also learn VFX and video edit.
+                  During my studies in 2020, driven by my interest in design and existing knowledge of the field, I wanted to create visually appealing web pages. Through online and international resources, I self-taught HTML, CSS, and JavaScript, gaining the ability to build simple static websites.
                 </div>
               </div>
               <div data-aos="zoom-in">
                 <div class="timecard-right timecard-two wow bounceInUp">
-                  2018~2019，As an engineer in Meicheng, associate with system
-                  intergration 、audio & video, learn about engineering in movie
-                  theater and conference room, family with Mixer、Amplifier、PA
-                  etc...
+                  From 2018 to 2019, I worked at Mei Cheng Industrial Co., Ltd., where I was responsible for system installation engineering and audiovisual media-related tasks. During this time, I gained hands-on experience with video, broadcast, audio, and large-scale cinema AV systems. I also became familiar with overall system architecture workflows and the operation of equipment such as mixers, amplifiers, and PA systems.
                 </div>
               </div>
               <div data-aos="zoom-in">
                 <div class="timecard-left timecard-three wow bounceInUp">
-                  2017， Graduated from NTUT，as a product test engineer in
-                  Diviotec, associate with devices testing and QA, learn about
-                  surveillance camera, so I have basic in internet and camera.
+                  Graduated in 2017 and completed an internship at Diviotec Company as a Product Test Engineer. My primary responsibilities involved testing IP cameras, NVRs, and related network equipment, assisting with device inspection and QA processes. Through this role, I gained practical knowledge of Ethernet networking and developed a fundamental understanding of surveillance system architecture. Additionally, I learned about the complete manufacturing process of cameras and their practical applications.
                 </div>
                 <div class="timecard-right timecard-four wow bounceInUp">
-                  2013，Study in National Taipei University Tachnology
-                  Electronic engineering department, major in integrated
-                  circuit, design IC and website.
+                  B.S. in Electronic Engineering, Taipei Tech (2013-2016)
+• Concentration: Integrated circuit design
+• Career Focus: Computer hardware components development
                 </div>
               </div>
             </div>
