--- a/eng.html
+++ b/eng.html
@@ -321,9 +321,9 @@
                   Graduated in 2017 and completed an internship at Diviotec Company as a Product Test Engineer. My primary responsibilities involved testing IP cameras, NVRs, and related network equipment, assisting with device inspection and QA processes. Through this role, I gained practical knowledge of Ethernet networking and developed a fundamental understanding of surveillance system architecture. Additionally, I learned about the complete manufacturing process of cameras and their practical applications.
                 </div>
                 <div class="timecard-right timecard-four wow bounceInUp">
-                  B.S. in Electronic Engineering, Taipei Tech (2013-2016)
-• Concentration: Integrated circuit design
-• Career Focus: Computer hardware components development
+                  <p>B.S. in Electronic Engineering, Taipei Tech (2013-2016)</p>
+<p>• Concentration: Integrated circuit designp </p>
+<p>• Career Focus: Computer hardware components development </p>
                 </div>
               </div>
             </div>
